@@ -1,7 +1,6 @@
 package com.fastfood;
 
 import com.fastfood.domain.exceptions.ProdutoNaoEncontradoException;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -9,86 +8,64 @@ import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 class GlobalExceptionHandlerTest {
 
-    private GlobalExceptionHandler exceptionHandler;
-
-    @BeforeEach
-    void setUp() {
-        exceptionHandler = new GlobalExceptionHandler();
-    }
+    private final GlobalExceptionHandler handler = new GlobalExceptionHandler();
 
     @Test
-    void deveTratarProdutoNaoEncontradoException() {
+    void handleProdutoNotFound() {
         UUID id = UUID.randomUUID();
         ProdutoNaoEncontradoException ex = new ProdutoNaoEncontradoException(id);
+        ResponseEntity<?> response = handler.handleProdutoNotFound(ex);
 
-        ResponseEntity<?> response = exceptionHandler.handleProdutoNotFound(ex);
-
-        assertNotNull(response);
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-        
-        Map<String, Object> body = (Map<String, Object>) response.getBody();
-        assertNotNull(body);
+        Map body = (Map) response.getBody();
         assertEquals(404, body.get("status"));
         assertEquals("Produto com ID " + id + " não encontrado.", body.get("error"));
     }
 
     @Test
-    void deveTratarIllegalArgumentException() {
-        IllegalArgumentException ex = new IllegalArgumentException("Erro de argumento");
+    void handleEnumParseError() {
+        IllegalArgumentException ex = new IllegalArgumentException("Erro");
+        ResponseEntity<?> response = handler.handleEnumParseError(ex);
 
-        ResponseEntity<?> response = exceptionHandler.handleEnumParseError(ex);
-
-        assertNotNull(response);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-
-        Map<String, Object> body = (Map<String, Object>) response.getBody();
-        assertNotNull(body);
+        Map body = (Map) response.getBody();
         assertEquals(400, body.get("status"));
         assertEquals("Categoria inválida.", body.get("error"));
     }
 
     @Test
-    void deveTratarExceptionGenerica() {
-        Exception ex = new RuntimeException("Erro inesperado");
+    void handleGenericError() {
+        Exception ex = new Exception("Erro genérico");
+        ResponseEntity<?> response = handler.handleGenericError(ex);
 
-        ResponseEntity<?> response = exceptionHandler.handleGenericError(ex);
-
-        assertNotNull(response);
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
-
-        Map<String, Object> body = (Map<String, Object>) response.getBody();
-        assertNotNull(body);
+        Map body = (Map) response.getBody();
         assertEquals(500, body.get("status"));
         assertEquals("Erro interno no servidor.", body.get("error"));
     }
 
     @Test
-    void deveTratarMethodArgumentNotValidException() {
+    void handleValidationExceptions() {
         MethodArgumentNotValidException ex = mock(MethodArgumentNotValidException.class);
         BindingResult bindingResult = mock(BindingResult.class);
-        FieldError fieldError = new FieldError("objeto", "campo", "mensagem de erro");
+        FieldError fieldError = new FieldError("object", "field", "message");
 
         when(ex.getBindingResult()).thenReturn(bindingResult);
-        when(bindingResult.getAllErrors()).thenReturn(Collections.singletonList(fieldError));
+        when(bindingResult.getAllErrors()).thenReturn(List.of(fieldError));
 
-        ResponseEntity<Map<String, String>> response = exceptionHandler.handleValidationExceptions(ex);
+        ResponseEntity<Map<String, String>> response = handler.handleValidationExceptions(ex);
 
-        assertNotNull(response);
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-        
-        Map<String, String> body = response.getBody();
-        assertNotNull(body);
-        assertEquals("mensagem de erro", body.get("campo"));
+        assertEquals("message", response.getBody().get("field"));
     }
 }
